structure/kustomize-manifests/caddy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: caddy
  labels:
    name: caddy
